--- a/index.html
+++ b/index.html
@@ -189,16 +189,13 @@
         </a>
         <address class="footer-addres">
           <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <p>
-            <a class="footer-contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </p>
-          <p>
-            <a class="footer-contacts" href="tel:+38-096-111-11-11"
-              >+38 096 111 11 11</a
-            >
-          </p>
+
+          <a class="footer-contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="footer-contacts" href="tel:+38-096-111-11-11">
+            <pre>+38 096 111 11 11</pre>
+          </a>
         </address>
       </div>
     </footer>
